WIP download apis
