# pkg/api/catalog/v3/service_grpc.pb.go
@@ -56,6 +56,8 @@ type CatalogServiceClient interface {
 	DeleteDeploymentPackage(ctx context.Context, in *DeleteDeploymentPackageRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	// Watches inventory of deployment packages for changes.
 	WatchDeploymentPackages(ctx context.Context, in *WatchDeploymentPackagesRequest, opts ...grpc.CallOption) (CatalogService_WatchDeploymentPackagesClient, error)
+	// Downloads a deployment package as a tarball.
+	DownloadDeploymentPackage(ctx context.Context, in *GetDeploymentPackageRequest, opts ...grpc.CallOption) (*DownloadDeploymentPackageResponse, error)
 	// Creates a new application.
 	CreateApplication(ctx context.Context, in *CreateApplicationRequest, opts ...grpc.CallOption) (*CreateApplicationResponse, error)
 	// Gets a list of applications.
@@ -275,6 +277,15 @@ func (x *catalogServiceWatchDeploymentPackagesClient) Recv() (*WatchDeploymentPa
 	return m, nil
 }
 
+func (c *catalogServiceClient) DownloadDeploymentPackage(ctx context.Context, in *GetDeploymentPackageRequest, opts ...grpc.CallOption) (*DownloadDeploymentPackageResponse, error) {
+	out := new(DownloadDeploymentPackageResponse)
+	err := c.cc.Invoke(ctx, "/catalog.v3.CatalogService/DownloadDeploymentPackage", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *catalogServiceClient) CreateApplication(ctx context.Context, in *CreateApplicationRequest, opts ...grpc.CallOption) (*CreateApplicationResponse, error) {
 	out := new(CreateApplicationResponse)
 	err := c.cc.Invoke(ctx, "/catalog.v3.CatalogService/CreateApplication", in, out, opts...)
@@ -484,6 +495,8 @@ type CatalogServiceServer interface {
 	DeleteDeploymentPackage(context.Context, *DeleteDeploymentPackageRequest) (*emptypb.Empty, error)
 	// Watches inventory of deployment packages for changes.
 	WatchDeploymentPackages(*WatchDeploymentPackagesRequest, CatalogService_WatchDeploymentPackagesServer) error
+	// Downloads a deployment package as a tarball.
+	DownloadDeploymentPackage(context.Context, *GetDeploymentPackageRequest) (*DownloadDeploymentPackageResponse, error)
 	// Creates a new application.
 	CreateApplication(context.Context, *CreateApplicationRequest) (*CreateApplicationResponse, error)
 	// Gets a list of applications.
@@ -562,6 +575,9 @@ func (UnimplementedCatalogServiceServer) DeleteDeploymentPackage(context.Context
 }
 func (UnimplementedCatalogServiceServer) WatchDeploymentPackages(*WatchDeploymentPackagesRequest, CatalogService_WatchDeploymentPackagesServer) error {
 	return status.Errorf(codes.Unimplemented, "method WatchDeploymentPackages not implemented")
+}
+func (UnimplementedCatalogServiceServer) DownloadDeploymentPackage(context.Context, *GetDeploymentPackageRequest) (*DownloadDeploymentPackageResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DownloadDeploymentPackage not implemented")
 }
 func (UnimplementedCatalogServiceServer) CreateApplication(context.Context, *CreateApplicationRequest) (*CreateApplicationResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateApplication not implemented")
@@ -893,6 +909,24 @@ func (x *catalogServiceWatchDeploymentPackagesServer) Send(m *WatchDeploymentPac
 	return x.ServerStream.SendMsg(m)
 }
 
+func _CatalogService_DownloadDeploymentPackage_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetDeploymentPackageRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CatalogServiceServer).DownloadDeploymentPackage(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/catalog.v3.CatalogService/DownloadDeploymentPackage",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CatalogServiceServer).DownloadDeploymentPackage(ctx, req.(*GetDeploymentPackageRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _CatalogService_CreateApplication_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(CreateApplicationRequest)
 	if err := dec(in); err != nil {
@@ -1209,6 +1243,10 @@ var CatalogService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "DeleteDeploymentPackage",
 			Handler:    _CatalogService_DeleteDeploymentPackage_Handler,
+		},
+		{
+			MethodName: "DownloadDeploymentPackage",
+			Handler:    _CatalogService_DownloadDeploymentPackage_Handler,
 		},
 		{
 			MethodName: "CreateApplication",
